# async-throttle-optimizer

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/async_throttle_optimizer/: rate_finder.py  throttler.py
tests/: test_throttler.py
