[metadata]
name = async-throttle-optimizer
version = 0.0.1
author = Ji-Hoon Kim
author_email = jh.kim@pyler.tech
description = A simple Python package for throttling asyncronous HTTP requests and optimizing the performance of your application.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    aiohttp

[options.packages.find]
where = src
